--- a/DataMining/EDA_Jerry.ipynb
+++ b/DataMining/EDA_Jerry.ipynb
@@ -309,363 +309,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>manufacturer</th>\n",
-       "      <th>model</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1622</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567890</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21955</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25413</th>\n",
-       "      <td>nissan</td>\n",
-       "      <td>pathfinder</td>\n",
-       "      <td>11111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38375</th>\n",
-       "      <td>gmc</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2808348671</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107009</th>\n",
-       "      <td>mercedes-benz</td>\n",
-       "      <td>benz e350</td>\n",
-       "      <td>9999999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109428</th>\n",
-       "      <td>jeep</td>\n",
-       "      <td>wrangler unlimited</td>\n",
-       "      <td>3429900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>109654</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mopar</td>\n",
-       "      <td>11111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117008</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>nova</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145053</th>\n",
-       "      <td>jeep</td>\n",
-       "      <td>wrangler</td>\n",
-       "      <td>12345679</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151283</th>\n",
-       "      <td>jeep</td>\n",
-       "      <td>wrangler</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151323</th>\n",
-       "      <td>jeep</td>\n",
-       "      <td>wrangler</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167398</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>silverado</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174403</th>\n",
-       "      <td>toyota</td>\n",
-       "      <td>tacoma</td>\n",
-       "      <td>22000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185946</th>\n",
-       "      <td>jeep</td>\n",
-       "      <td>wrangler</td>\n",
-       "      <td>1111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190027</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1962 Studebaker Lark 2 dr</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191736</th>\n",
-       "      <td>cadillac</td>\n",
-       "      <td>fleetwood</td>\n",
-       "      <td>79000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191738</th>\n",
-       "      <td>cadillac</td>\n",
-       "      <td>fleetwood</td>\n",
-       "      <td>7900000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>215250</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>corvette</td>\n",
-       "      <td>1111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>219541</th>\n",
-       "      <td>dodge</td>\n",
-       "      <td>challenger</td>\n",
-       "      <td>1111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>238861</th>\n",
-       "      <td>ford</td>\n",
-       "      <td>ranger</td>\n",
-       "      <td>98504250</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>256573</th>\n",
-       "      <td>toyota</td>\n",
-       "      <td>prius</td>\n",
-       "      <td>12345678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>267603</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>nova ss</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>305894</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>silverado</td>\n",
-       "      <td>1111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>306217</th>\n",
-       "      <td>ram</td>\n",
-       "      <td>3500 crewcab tradesma</td>\n",
-       "      <td>123456789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>326182</th>\n",
-       "      <td>chrysler</td>\n",
-       "      <td>royal</td>\n",
-       "      <td>123456789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>339197</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>camaro</td>\n",
-       "      <td>123456789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>339213</th>\n",
-       "      <td>jeep</td>\n",
-       "      <td>wrangler unlimited</td>\n",
-       "      <td>123456789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>346637</th>\n",
-       "      <td>cadillac</td>\n",
-       "      <td>fleetwood</td>\n",
-       "      <td>1111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>360640</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>c10</td>\n",
-       "      <td>11111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362163</th>\n",
-       "      <td>cadillac</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>50000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>364274</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>c10</td>\n",
-       "      <td>1111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>369909</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>370801</th>\n",
-       "      <td>chrysler</td>\n",
-       "      <td>200</td>\n",
-       "      <td>2015200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>372613</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>374346</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>384531</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>385434</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>silverado 2500hd</td>\n",
-       "      <td>3615215112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>386045</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>silverado</td>\n",
-       "      <td>1111111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>389721</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>392756</th>\n",
-       "      <td>chevrolet</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1234567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>393667</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1961 corvette</td>\n",
-       "      <td>100000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>414603</th>\n",
-       "      <td>ford</td>\n",
-       "      <td>explorer</td>\n",
-       "      <td>123456789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>414605</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Navagater</td>\n",
-       "      <td>123456789</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>425188</th>\n",
-       "      <td>jeep</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2857993261</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         manufacturer                      model       price\n",
-       "1622        chevrolet                        NaN  1234567890\n",
-       "21955       chevrolet                        NaN     1234567\n",
-       "25413          nissan                 pathfinder    11111111\n",
-       "38375             gmc                        NaN  2808348671\n",
-       "107009  mercedes-benz                  benz e350     9999999\n",
-       "109428           jeep         wrangler unlimited     3429900\n",
-       "109654            NaN                      Mopar    11111111\n",
-       "117008      chevrolet                       nova     1234567\n",
-       "145053           jeep                   wrangler    12345679\n",
-       "151283           jeep                   wrangler     1234567\n",
-       "151323           jeep                   wrangler     1234567\n",
-       "167398      chevrolet                  silverado     1234567\n",
-       "174403         toyota                     tacoma    22000000\n",
-       "185946           jeep                   wrangler     1111111\n",
-       "190027            NaN  1962 Studebaker Lark 2 dr     1234567\n",
-       "191736       cadillac                  fleetwood    79000000\n",
-       "191738       cadillac                  fleetwood     7900000\n",
-       "215250      chevrolet                   corvette     1111111\n",
-       "219541          dodge                 challenger     1111111\n",
-       "238861           ford                     ranger    98504250\n",
-       "256573         toyota                      prius    12345678\n",
-       "267603      chevrolet                    nova ss     1234567\n",
-       "305894      chevrolet                  silverado     1111111\n",
-       "306217            ram      3500 crewcab tradesma   123456789\n",
-       "326182       chrysler                      royal   123456789\n",
-       "339197      chevrolet                     camaro   123456789\n",
-       "339213           jeep         wrangler unlimited   123456789\n",
-       "346637       cadillac                  fleetwood     1111111\n",
-       "360640      chevrolet                        c10    11111111\n",
-       "362163       cadillac                        NaN    50000000\n",
-       "364274      chevrolet                        c10     1111111\n",
-       "369909      chevrolet                        NaN     1234567\n",
-       "370801       chrysler                        200     2015200\n",
-       "372613      chevrolet                        NaN     1234567\n",
-       "374346      chevrolet                        NaN     1234567\n",
-       "384531      chevrolet                        NaN     1234567\n",
-       "385434      chevrolet           silverado 2500hd  3615215112\n",
-       "386045      chevrolet                  silverado     1111111\n",
-       "389721      chevrolet                        NaN     1234567\n",
-       "392756      chevrolet                        NaN     1234567\n",
-       "393667            NaN              1961 corvette   100000000\n",
-       "414603           ford                   explorer   123456789\n",
-       "414605            NaN                  Navagater   123456789\n",
-       "425188           jeep                        NaN  2857993261"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[df['price']>10**6][[\"manufacturer\",\"model\",'price']]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1856,10 +1499,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#prices less than 100\n",
+    "\"\"\"#prices less than 100\n",
     "#prices more than 1 million\n",
     "#prices like 123456789\n",
     "mean_of_normal_prices=df.drop(df[(df['price']<=10**2) | \n",
@@ -1871,7 +1516,7 @@
     "       (df['price']>10**6) | \n",
     "       (df[\"price\"].isin([123,1234,12345,123456,123456])),'price']=mean_of_normal_prices\n",
     "\n",
-    "df['price'].mean()"
+    "df['price'].mean()\"\"\""
    ]
   },
   {
