--- a/DataMining/EDA-Diego.ipynb
+++ b/DataMining/EDA-Diego.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "(458213, 26)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,35 +91,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['Unnamed: 0' 'id' 'image_url' 'VIN' 'region_url' 'id' 'model' 'size'\\n 'url'] not found in axis\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-dbc6d9e475a0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove_columns\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Google Drive\\Southampton\\Year 4\\Semester 2\\Git\\GroupWork\\DataMining\\CleaningCars.py\u001b[0m in \u001b[0;36mremove_columns\u001b[1;34m(df)\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;34m\"\"\"Removes columns we agreed were useless\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Unnamed: 0\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"id\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"image_url\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"VIN\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"region_url\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"id\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"model\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"size\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"url\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m     \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   4172\u001b[0m             \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4173\u001b[0m             \u001b[0minplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4174\u001b[1;33m             \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4175\u001b[0m         )\n\u001b[0;32m   4176\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[0;32m   3887\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3888\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3889\u001b[1;33m                 \u001b[0mobj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3890\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3891\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[1;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[0;32m   3921\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3922\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3923\u001b[1;33m                 \u001b[0mnew_axis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3924\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3925\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mdrop\u001b[1;34m(self, labels, errors)\u001b[0m\n\u001b[0;32m   5285\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5286\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;34m\"ignore\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5287\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{labels[mask]} not found in axis\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5288\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5289\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['Unnamed: 0' 'id' 'image_url' 'VIN' 'region_url' 'id' 'model' 'size'\\n 'url'] not found in axis\""
+     ]
+    }
+   ],
    "source": [
     "df = hf.remove_columns(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['url', 'region', 'price', 'year', 'manufacturer', 'condition',\n",
-       "       'cylinders', 'fuel', 'odometer', 'title_status', 'transmission',\n",
-       "       'drive', 'type', 'paint_color', 'description', 'state', 'lat', 'long',\n",
-       "       'posting_date'],\n",
+       "Index(['region', 'price', 'year', 'manufacturer', 'condition', 'cylinders',\n",
+       "       'fuel', 'odometer', 'title_status', 'transmission', 'drive', 'type',\n",
+       "       'paint_color', 'description', 'state', 'lat', 'long', 'posting_date'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region</th>\n",
+       "      <th>price</th>\n",
+       "      <th>year</th>\n",
+       "      <th>manufacturer</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>odometer</th>\n",
+       "      <th>title_status</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>drive</th>\n",
+       "      <th>type</th>\n",
+       "      <th>paint_color</th>\n",
+       "      <th>description</th>\n",
+       "      <th>state</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>posting_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>auburn</td>\n",
+       "      <td>35990</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>chevrolet</td>\n",
+       "      <td>good</td>\n",
+       "      <td>8 cylinders</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>32742.0</td>\n",
+       "      <td>clean</td>\n",
+       "      <td>other</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>other</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Carvana is the safer way to buy a car During t...</td>\n",
+       "      <td>al</td>\n",
+       "      <td>32.590000</td>\n",
+       "      <td>-85.480000</td>\n",
+       "      <td>2020-12-02T08:11:30-0600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>auburn</td>\n",
+       "      <td>7500</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>hyundai</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>4 cylinders</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>93600.0</td>\n",
+       "      <td>clean</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>fwd</td>\n",
+       "      <td>sedan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>I'll move to another city and try to sell my c...</td>\n",
+       "      <td>al</td>\n",
+       "      <td>32.547500</td>\n",
+       "      <td>-85.468200</td>\n",
+       "      <td>2020-12-02T02:11:50-0600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>auburn</td>\n",
+       "      <td>4900</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>bmw</td>\n",
+       "      <td>good</td>\n",
+       "      <td>6 cylinders</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>87046.0</td>\n",
+       "      <td>clean</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SUV</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>Clean 2006 BMW X3 3.0I.  Beautiful and rare Bl...</td>\n",
+       "      <td>al</td>\n",
+       "      <td>32.616807</td>\n",
+       "      <td>-85.464149</td>\n",
+       "      <td>2020-12-01T19:50:41-0600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>auburn</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1974.0</td>\n",
+       "      <td>chevrolet</td>\n",
+       "      <td>good</td>\n",
+       "      <td>4 cylinders</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>190000.0</td>\n",
+       "      <td>clean</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>rwd</td>\n",
+       "      <td>pickup</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>1974 chev. truck (LONG BED) NEW starter front ...</td>\n",
+       "      <td>al</td>\n",
+       "      <td>32.861600</td>\n",
+       "      <td>-85.216100</td>\n",
+       "      <td>2020-12-01T15:54:45-0600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>auburn</td>\n",
+       "      <td>19500</td>\n",
+       "      <td>2005.0</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>8 cylinders</td>\n",
+       "      <td>diesel</td>\n",
+       "      <td>116000.0</td>\n",
+       "      <td>lien</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>4wd</td>\n",
+       "      <td>pickup</td>\n",
+       "      <td>blue</td>\n",
+       "      <td>2005 Ford F350 Lariat (Bullet Proofed). This t...</td>\n",
+       "      <td>al</td>\n",
+       "      <td>32.547500</td>\n",
+       "      <td>-85.468200</td>\n",
+       "      <td>2020-12-01T12:53:56-0600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   region  price    year manufacturer  condition    cylinders    fuel  \\\n",
+       "0  auburn  35990  2010.0    chevrolet       good  8 cylinders     gas   \n",
+       "1  auburn   7500  2014.0      hyundai  excellent  4 cylinders     gas   \n",
+       "2  auburn   4900  2006.0          bmw       good  6 cylinders     gas   \n",
+       "3  auburn   2000  1974.0    chevrolet       good  4 cylinders     gas   \n",
+       "4  auburn  19500  2005.0         ford  excellent  8 cylinders  diesel   \n",
+       "\n",
+       "   odometer title_status transmission drive    type paint_color  \\\n",
+       "0   32742.0        clean        other   rwd   other         NaN   \n",
+       "1   93600.0        clean    automatic   fwd   sedan         NaN   \n",
+       "2   87046.0        clean    automatic   NaN     SUV        blue   \n",
+       "3  190000.0        clean    automatic   rwd  pickup        blue   \n",
+       "4  116000.0         lien    automatic   4wd  pickup        blue   \n",
+       "\n",
+       "                                         description state        lat  \\\n",
+       "0  Carvana is the safer way to buy a car During t...    al  32.590000   \n",
+       "1  I'll move to another city and try to sell my c...    al  32.547500   \n",
+       "2  Clean 2006 BMW X3 3.0I.  Beautiful and rare Bl...    al  32.616807   \n",
+       "3  1974 chev. truck (LONG BED) NEW starter front ...    al  32.861600   \n",
+       "4  2005 Ford F350 Lariat (Bullet Proofed). This t...    al  32.547500   \n",
+       "\n",
+       "        long              posting_date  \n",
+       "0 -85.480000  2020-12-02T08:11:30-0600  \n",
+       "1 -85.468200  2020-12-02T02:11:50-0600  \n",
+       "2 -85.464149  2020-12-01T19:50:41-0600  \n",
+       "3 -85.216100  2020-12-01T15:54:45-0600  \n",
+       "4 -85.468200  2020-12-01T12:53:56-0600  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
